--- a/CSS/gallery.css
+++ b/CSS/gallery.css
@@ -1,7 +1,7 @@
 body {
     margin: 0px;
     padding: 0px;
-    background-image: url('/IMAGES/pexels-victor-freitas-841130.jpg');
+    background-image: url('../IMAGES/bg.jpg');
     color: #ebebff;
     height: 100%;
     background-repeat: no-repeat;
